<resources>
    <string name="app_name">MegAlexa</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="wow_you_re_logged">Wow! You\'re logged!</string>
    <string name="logout">Logout</string>
    <string name="title_activity_logged_general">LoggedGeneralActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_general_logged">GeneralLoggedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="library">Library</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="title_workflow">Your workflows</string>
    <string name="title_main">Your workflow</string>
    <string name="email_developer">zerosevenswe@gmail.com</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_create_workflow">Create your workflow</string>
    <string name="button_save_workflow">save your workflow</string>
    <string name="title_user_workflow">Insert your workflow name here</string>
    <string name="title_create_blocks"/>
    <string name="title_create_block">Add blocks</string>
    <string name="nav_account_title">Information</string>
    <string name="nav_management_title">Account</string>
    <string name="insert_url">Insert URL</string>
    <string name="save">Save</string>
    <string name="url">URL</string>
    <string name="add_feedrss">Add FeedRSS</string>
    <string name="add">Add</string>
    <string name="insert_url_hint">Insert url here</string>
    <string name="insert_text_here">Insert Text here</string>
    <string name="entertime">Enter time</string>
    <string name="dotpoint">:</string>
    <string name="setalarm">SET ALARM</string>
    <string name="slash"> / </string>
    <string name="enterdate">Enter date</string>
</resources>