<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/title_create_workflow"
            android:layout_width="249dp"
            android:layout_height="50dp"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" android:textAlignment="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:autofillHints="morning"
            android:paddingTop="5dp"
            android:id="@+id/input_title_workflow" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:background="@color/colorSecondaryAccent" app:layout_constraintStart_toStartOf="parent"
            android:inputType="textShortMessage" android:hint="@string/title_user_workflow"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_save_blue_24dp"
            android:id="@+id/button_save_workflow"
            android:contentDescription="@string/button_save_workflow"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/button_cancel_workflow_creation" android:background="@drawable/ic_cancel_black_24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:id="@+id/button_continue"
            android:background="@drawable/ic_arrow_right"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="513dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recyclerView_addedBlocksOnCreation"
            app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_title_workflow"
    />
</android.support.constraint.ConstraintLayout>